# MineDraft

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: benchmark_psd.py
benchmarks/trace/: analyze_plots.ipynb  analyze_traces.py
minedraft/: patching.py
minedraft/benchmarks/: trace.py
minedraft/plugin/: config.py  plugin.py  sequence.py
minedraft/plugin/core/: scheduler.py
minedraft/plugin/distributed/: communication_op.py  parallel_state.py
minedraft/plugin/engine/: async_llm_engine.py  llm_engine.py
minedraft/plugin/model_executor/layers/: rejection_sampler.py  spec_decode_base_sampler.py
minedraft/plugin/model_executor/models/: eagle.py
minedraft/plugin/spec_decode/: batch_expansion.py  interfaces.py  metrics.py  mqa_scorer.py  spec_decode_worker.py  tetris.py  top1_proposer.py  util.py
minedraft/plugin/worker/: model_runner.py  worker.py  worker_base.py
scripts/: bootstrap.py  convert_datasets.py  experiment_1_parallel.sh  experiment_1_sequential.sh  experiment_2_eagle_parallel.sh  experiment_2_eagle_sequential.sh  experiment_2_llama_parallel.sh  experiment_2_llama_sequential.sh  experiment_3_n_llama_parallel.sh  experiment_3_n_llama_sequential.sh  experiment_3_n_qwen_parallel.sh  experiment_3_n_qwen_sequential.sh  experiment_4_bs_parallel.sh  experiment_4_bs_sequential.sh  experiment_5_tetris_llama_parallel.sh  experiment_5_tetris_qwen_parallel.sh  experiment_5_tetris_qwen_sequential.sh  experiment_6_qwen8b.sh  experiment_7_qwen235b.sh  experiment_8_nsys.sh  run_all.sh  run_parallel.sh  run_sequential.sh
